...
              ),
            })}
          />
          <Stack.Screen
            name="Settings"
            component={SettingsScreen}
            options={{ headerTitle: 'הגדרות' }}
          />
          <Stack.Screen
            name="BackgroundServiceSettings"
            component={BackgroundServiceSettingsScreen}
            options={{ headerTitle: 'שירות רקע' }}
          />
...
            component={VoiceSpeedSettingsScreen}
            options={{ headerTitle: 'מהירות דיבור' }}
          />
          <Stack.Screen
            name="Reminders"
            component={RemindersScreen}
            options={{ headerTitle: 'תזכורות' }}
          />
          <Stack.Screen
            name="SilenceTimeoutSettings"
            component={SilenceTimeoutSettingsScreen}
            options={{ headerTitle: 'זמן שתיקה לעצירה' }}
          />
...
